--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -10,7 +10,7 @@
 
         @media screen {
             &::after {
-                content: '2020 © by Inês Almeida   |   ines-almeida.com';
+                content: '2025 © by Ailmy   |   ailm.site';
                 height: 4rem;
                 width: 100%;
                 position: absolute;
