--- a/layouts/_default/cv.html
+++ b/layouts/_default/cv.html
@@ -10,10 +10,7 @@
         {{ else }}
         <div class="content__left">
         {{ end }}
-            <h1 class="mainHeading">{{ $data.BasicInfo.FirstName }} <span>{{ $data.BasicInfo.LastName }}</span></h1>
-            {{ partial "_profile.html" $data }}
             {{ partial "_experience.html" $data }}
-            {{ partial "_education.html" $data }}
             {{ partial "_references.html" $data }}
         </div>
         {{ if .Site.Params.swapColumns }}
@@ -21,12 +18,15 @@
         {{ else }}
         <div class="content__right">
         {{ end }}
-            {{ partial "_avatar.html" $data }}
+            <h1 class="mainHeading">{{ $data.BasicInfo.FirstName }} <span>{{ $data.BasicInfo.LastName }}</span></h1>
+            {{ partial "_profile.html" $data }}
             {{ partial "_contacts.html" $data }}
             {{ partial "_skills.html" $data }}
-            {{ partial "_languages.html" $data }}
+<!--            {{ partial "_languages.html" $data }}-->
+            {{ partial "_education.html" $data }}
             {{ partial "_diplomas.html" $data }}
-            {{ partial "_interests.html" $data }}
+<!--            {{ partial "_interests.html" $data }}-->
+
         </div>
     </div>
 </body>
